--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
+    "test": "vue-cli-service serve --mode test",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "element-ui": "^2.4.11",
+    "fastclick": "^1.0.6",
+    "fs": "0.0.1-security",
+    "glob": "^7.1.3",
+    "html2canvas": "^1.0.0-alpha.12",
+    "path": "^0.12.7",
+    "qs": "^6.6.0",
     "vue": "^2.5.21",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
