--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "element-ui": "^2.4.11",
+    "clipboard": "^2.0.4",
     "fastclick": "^1.0.6",
     "fs": "0.0.1-security",
     "glob": "^7.1.3",
     "html2canvas": "^1.0.0-alpha.12",
+    "mint-ui": "^2.2.13",
     "path": "^0.12.7",
+    "qrcode": "^1.3.2",
     "qs": "^6.6.0",
+    "swiper": "^3.4.2",
     "vue": "^2.5.21",
-    "vue-awesome-swiper": "^3.1.3",
+    "vue-clipboard2": "^0.3.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -29,11 +32,14 @@
     "@vue/cli-service": "^3.2.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "fis3": "^3.4.41",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "lint-staged": "^8.1.0",
+    "vconsole": "^3.3.0",
     "vue-template-compiler": "^2.5.21"
   },
   "gitHooks": {
